fix: scrollbar styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -82,23 +82,5 @@
 
 /* total width */
 div::-webkit-scrollbar {
-  background-color: var(--background);
-  width: 10px;
-}
-
-/* background of the scrollbar except button or resizer */
-div::-webkit-scrollbar-track {
-  background-color: var(--background);
-}
-
-/* scrollbar itself */
-div::-webkit-scrollbar-thumb {
-  background-color: transparent;
-  border-radius: 16px;
-  border: 3px solid transparent;
-}
-
-/* set button(top and bottom of the scrollbar) */
-div::-webkit-scrollbar-button {
   display: none;
 }
